# alpha-vantage-haskell

./: README.md  alpha-vantage.cabal
lib/: AlphaVantage.hs
lib/AlphaVantage/: API.hs  Client.hs  Core.hs  Logging.hs  Model.hs
lib/AlphaVantage/API/: MarketData.hs
tests/: Instances.hs  Test.hs
