name:           alpha-vantage
version:        0.1.0.0
description:    .
                Client library for calling the Alpha Vantage API based on http-client.
                .
                host: www.alphavantage.co
                .
                category:       Web
author:         Author Name Here
maintainer:     author.name@email.com
copyright:      YEAR - AUTHOR
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

library
  hs-source-dirs:
      lib
  ghc-options: -Wall -funbox-strict-fields
  build-depends:
      aeson 
    , base 
    , base64-bytestring 
    , bytestring 
    , case-insensitive
    , containers 
    , deepseq 
    , exceptions 
    , http-api-data 
    , http-client 
    , http-client-tls
    , http-media 
    , http-types 
    , iso8601-time 
    , microlens 
    , mtl 
    , network
    , random 
    , safe-exceptions 
    , text 
    , time 
    , transformers 
    , unordered-containers
    , vector 
    , katip 
    , cassava 
    , time 
  other-modules:
      Paths_alpha_vantage
  exposed-modules:
      AlphaVantage
      AlphaVantage.API
      AlphaVantage.API.MarketData
      AlphaVantage.Client
      AlphaVantage.Core
      AlphaVantage.Logging
      AlphaVantage.Model
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      tests
  ghc-options: -Wall -fno-warn-orphans
  build-depends:
      alpha-vantage
    , QuickCheck
    , aeson
    , base 
    , bytestring 
    , containers
    , hspec 
    , iso8601-time
    , mtl 
    , semigroups
    , text
    , time
    , transformers 
    , unordered-containers
    , vector
  other-modules:
      ApproxEq
      Instances
  default-language: Haskell2010
